--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <h1>Versionamento</h1>
     <p>O git é um software que permite realizar versões de um projeto.O gitHub desktop é um software que faz a ligação entre Visual Studio Code , Git e GitHub.</p>
     <p>O GitHub desktop permite fazer a sincronia entre o repositório local e o repositório remoto</p>
-    
+    <h2>Commit</h2>
+    <p>É o processo de confirmação de uma versão, ou seja, a cada alteração é possível confirmar a alteração</p>
+    <h2>Push</h2>
+    <p>Este comando envia(sincroniza) as alterações realizadas no repositório local com o repositório remoto no GitHub</p>
 </body>
 </html>
